--- a/static/css/design.css
+++ b/static/css/design.css
@@ -4,9 +4,12 @@ body {
 
 canvas {
     background: #fff;
-    margin: 20px;
+    margin: 0px;
+    width : 40px;
+    height : 40px;
 }
 
 #board {
     border: 1px solid black;
 }
+
